--- a/css/grid.css
+++ b/css/grid.css
@@ -13,21 +13,38 @@ body#home section#work .section {
   margin: 0 auto;
 }
 
-.blog-links-hidden{
-  display:none !important;
+#work{
+  display: none;
 }
 .btn-container{
-  margin: auto;
-  height:44px;
-  width:166.23px;
-  
+  text-align: center;
+  height: 10vh;
+  margin-top: 1vh;
 }
 
-button{
-  cursor:pointer;
-  line-height: 20px;
-  font-size:20px;
-  border: 1px solid #ddd;
+button {
+    cursor: pointer;
+    line-height: 30px;
+    padding: 0 0 5px 0;
+    font-size: 24px;
+    margin-top: 1rem;
+    border: none;
+    border-bottom: 3px solid #ddd;
+    background: none;
+    font-family: inherit;
+    color: #6699ee;
+    text-transform: uppercase;
+    font-weight: 600;
+    transition: all 0.2s;
+}
+
+button:hover {
+    border-bottom: 3px solid #bbb;
+}
+
+
+button:focus {
+  outline: none !important;
 }
 
 .col1 {
@@ -268,7 +285,7 @@ button{
 
   #blog-links .blog-link {
     grid-row: span 1;
-    grid-column: span 1;
+    grid-column: span 2;
   }
 
   #blog-links .blog-link:last-of-type {
