--- a/scss/extra.scss
+++ b/scss/extra.scss
@@ -605,6 +605,31 @@ section
     div.container {
       width: 90% !important;
 
+      div.twelve {
+        div.image-container {
+          text-align: center; 
+          margin-bottom: 5vh;
+
+          p {
+            margin-bottom: 0 !important;
+          }
+
+          img.cover {
+            height: 60vh; 
+            width: auto; 
+            box-shadow: 0 25px 30px 0 rgba(0,0,0,0.21); 
+            border-radius: 5px;
+          }
+
+          img.portfolio {
+            max-height: 75vh; 
+            max-width: 100%; 
+            box-shadow: 0 25px 30px 0 rgba(0,0,0,0.21); 
+            border-radius: 15px;
+          }
+        }
+      }
+
       div.six.columns {
         img {
           width: 80%;
