--- a/css/style.css
+++ b/css/style.css
@@ -466,6 +466,36 @@ hr {
   display: table;
   clear: both; }
 
+.ticker {
+  font-weight: 600;
+  font-size: 144%;
+}
+
+.ticker:after {
+  content: '_';
+  opacity: .4;
+  -webkit-animation: blink .5s infinite;
+  animation: blink .5s infinite;
+}
+
+@keyframes blink {
+    0% {
+        opacity: 0
+    }
+
+    49% {
+        opacity: 0
+    }
+
+    51% {
+        opacity: 1
+    }
+
+    100% {
+        opacity: 1
+    }
+}
+
 /* Media Queries
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 /*
@@ -550,6 +580,16 @@ body#home section#about img {
   height: auto;
   float: right; 
   border-radius: 25px;}
+
+body#home section#quote {
+  padding: 5%;
+}
+
+body#home section#quote h1{
+  font-weight: 100;
+  font-style: italic;
+  margin-bottom: 0;
+}
 
 body#home section a.read-more {
 border: thin solid #e9ebea;
