--- a/scss/skills.scss
+++ b/scss/skills.scss
@@ -185,6 +185,43 @@ to {
     width: 90%}
 }
 
+#Skill-Java {
+    animation: Animate-Java 4s;
+    -webkit-animation: Animate-Java 4s;
+    -moz-animation: Animate-Java 4s;
+    -o-animation: Animate-Java 4s;
+    width: 85%;
+    height: 35px;
+    position: absolute;
+    border-radius: 25px;
+    background-color: #135590;
+}
+@keyframes Animate-Java {
+    from {
+    width: 10px;
+}
+to {
+    width: 85%}
+}@-webkit-keyframes Animate-Java {
+    from {
+    width: 10px;
+}
+to {
+    width: 85%}
+}@-moz-keyframes Animate-Java {
+    from {
+    width: 10px;
+}
+to {
+    width: 85%}
+}@-o-keyframes Animate-Java {
+    from {
+    width: 10px;
+}
+to {
+    width: 85%}
+}
+
 #Skill-Csharp {
     animation: Animate-C 4s;
     -webkit-animation: Animate-Csharp 4s;
