--- a/css/style.css
+++ b/css/style.css
@@ -99,6 +99,16 @@ div#inner {
   -webkit-box-sizing: border-box;
   box-sizing: border-box; }
 
+section#skills div.container .columns {
+  text-align: center;
+  font-size: 20px;
+  padding: 15px;
+  background: #f7f7f7;
+  margin: 10px 20px;
+  border-radius: 10px;
+  margin-left: 0;
+}
+
 .center {
   text-align: center;
 }
@@ -916,6 +926,17 @@ body#home section#footer {
     height: 30px;
     width: 30px;
     top: 23px; }
+  section#skills div.container .columns {
+    text-align: center;
+    float: none;
+    display: inline;
+    font-size: 15px;
+    padding: 5px;
+    background: #f7f7f7;
+    margin: 10px;
+    border-radius: 10px;
+    margin-left: 0;
+  }
   body#home header#masthead .right.columns {
     font-size: 10px; }
   body#home section#about div.container.showcase div.caption .twelve p {
