--- a/css/style.css
+++ b/css/style.css
@@ -211,7 +211,8 @@ section#skills div.container .columns {
 html is set to 62.5% so that all the REM measurements throughout Skeleton
 are based on 10px sizing. So basically 1.5rem = 15px :) */
 html {
-  font-size: 62.5%; }
+  font-size: 62.5%; 
+}
 
 body {
   font-size: 1.5em;
@@ -680,16 +681,21 @@ body#home section#about div.intro {
 body#home section#about div.intro div.links a {
   text-decoration: none;
   font-size: 1.2em;
-  border: 1px solid #aaa;
+  border: none;
   margin-top: 20px;
-  padding: 15px 25px;
+  padding: 15px 25px 15px 0px;
   border-radius: 7px;
   width: 120%;
 }
 
+
+
 body#home section#about div.intro div.links a:hover {
-  background: #6699ee;
-  color: #fff;
+  color: #2967d0;
+}
+
+body#home section#about div.links i {
+  font-size: 15px;
 }
 
 body#home section#about h2{
