--- a/css/style.css
+++ b/css/style.css
@@ -936,8 +936,9 @@ body#home section#footer {
     text-align: center;
     float: none;
     display: inline;
-    font-size: 15px;
-    padding: 5px;
+    line-height: 3.0;
+    font-size: 18px;
+    padding: 10px;
     background: #f7f7f7;
     margin: 10px;
     border-radius: 10px;
@@ -1051,7 +1052,7 @@ body#home section#footer {
 
     body#home section#about p {
       text-align: justify;
-      font-size: 100%;
+      font-size: 120%;
     }
 
     body#home section#about .vercent {
